<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">Söun̈dböard</string>
    <string name="add_sound">Add sound</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="name">Name</string>
    <string name="edit_sound">Edit sound</string>
    <string name="edit_sounds">Edit sounds</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="name_cannot_be_empty">Name cannot be empty</string>
    <string name="reorder">Reorder</string>
    <string name="reordering_enabled">Reordering enabled</string>
    <string name="reordering_disabled">Reordering disabled</string>
    <string name="zoom_in">Zoom in</string>
    <string name="zoom_out">Zoom out</string>
    <string name="volume">Volume</string>
    <string name="category">Category</string>
    <string name="add_category">Add category</string>
    <string name="select_colour">Select Colour</string>
    <string name="select_background_colour">Select background colour</string>
    <string name="background_colour">Background colour</string>
    <string name="ok">OK</string>
    <string name="zoom_level_percent">Zoom level: %1$d%%</string>
    <string name="data_not_fetched_yet">Data not fetched yet, please try again</string>
    <string name="delete_category">Delete category</string>
    <string name="delete_category_with_name">Delete category %1$s?</string>
    <string name="cannot_delete_last_category">There has to be at least one category.</string>
    <string name="edit_category">Edit category</string>
    <string name="delete_sound_name">Delete sound %1$s?</string>
    <string name="delete_sounds_count" tools:ignore="PluralsCandidate">Delete %1$d sounds?</string>
    <string name="not_initialized_yet">Not initialized yet!</string>
    <string name="add_sounds">Add sounds</string>
    <string name="multiple_sounds_selected" tools:ignore="PluralsCandidate">(%1$d sounds selected)</string>
    <string name="collapse_expand_category">Collapse/expand category</string>
    <string name="playing">Playing</string>
    <string name="load_failed">Load failed</string>
    <string name="selected">Selected</string>
    <string name="add_sound_here">Add sound here</string>
    <string name="duration_seconds">%1$ss</string>
    <string name="select_all">Select all</string>
    <string name="repress_mode">Re-press mode</string>
    <string name="on_repress">On repress: %1$s</string>
    <string name="update_existing">Update existing</string>
    <string name="skip">Skip</string>
    <string name="no_sounds_to_add">No sounds to add!</string>
    <string name="soundplayer_not_initialized">SoundPlayer not initialized</string>
    <string name="input_search_term">Input search term</string>
    <string name="toggle_filter">Toggle filtering</string>
    <string name="close_filter">Close filter</string>
    <string name="undo">Undo</string>
    <string name="ascending">Ascending</string>
    <string name="descending">Descending</string>
    <string name="cannot_enable_filter">Cannot enable filter while reordering is enabled</string>
    <string name="undid">Undid!</string>
    <string name="night_day_mode">Night/day mode</string>
    <string name="language">Language</string>
    <string name="settings">Sëttings</string>
    <string name="loading">Loading …</string>
    <string name="audio_buffer_size">Audio buffer size</string>
    <string name="buffer_size_summary">Lower this if audio is too unresponsive or the shortest sounds don\'t play at all. If audio is choppy, raise it.</string>
    <string name="soundboard_settings" translatable="false">Söun̈dböard Sëttin̈gs</string>
    <string name="reset_buffer_size_to_default">Reset buffer size to default</string>
    <string name="no_sound_chosen">No sound chosen!</string>
    <string name="help">Hëlp!!</string>
    <string name="duration">Duration</string>
    <string name="add_date">Add date</string>
    <string name="sort_by">Sort by</string>
    <string name="unchanged">(Unchanged)</string>
    <string name="paused">Paused</string>
    <string name="stop">Stop</string>
    <string name="restart">Restart</string>
    <string name="overlap">Overlap</string>
    <string name="pause">Pause</string>
    <string name="move_category_up">Move category up</string>
    <string name="move_category_down">Move category down</string>
    <string name="redo">Redo</string>
    <string name="redid">Redid!</string>
    <string name="help_section_menu_selections">Menü selëctiöns</string>
    <string name="help_add_sounds_title">Add sound(s)</string>
    <string name="help_add_sounds_text">Add one or more sounds to the soundboard. For technical reasons, they will be copied to the app\'s internal storage.</string>
    <string name="help_reorder_title">Reorder</string>
    <string name="help_reorder_text">When activated, you can reorder sounds by dragging and dropping them, and categories by pressing \'up\' and \'down\' icons.</string>
    <string name="help_filter_title">Filter</string>
    <string name="help_filter_text">When activated, you can filter the displayed sounds by entering a string.</string>
    <string name="help_settings_title">Settings</string>
    <string name="help_settings_text">A few basic app settings.</string>
    <string name="help_add_category_title">Add category</string>
    <string name="help_zoom_title">Zoom</string>
    <string name="help_zoom_text">You may also zoom in and out by pinching with two fingers.</string>
    <string name="help_undo_title">Undo</string>
    <string name="help_undo_text">Undo the latest addition, modification, deletion, or reordering of sounds or categories. You can undo the last 20 actions since the last app restart.</string>
    <string name="help_redo_title">Redo</string>
    <string name="help_redo_text">Redo the latest undone change. Or don\'t, if it confuses you.</string>
    <string name="help_section_repress_mode">Rë-prëss möde</string>
    <string name="help_repress_mode_pretext">This dictates what will happen when you press a sound while it\'s already playing. The icon depends on the mode currently chosen.</string>
    <string name="help_repress_stop_title">Stop</string>
    <string name="help_repress_stop_text">The sound will just stop.</string>
    <string name="help_repress_restart_title">Restart</string>
    <string name="help_repress_restart_text">The sound will stop and immediately restart.</string>
    <string name="help_repress_overlap_title">Overlap</string>
    <string name="help_repress_overlap_text">The same sound will play again, overdubbing what is already playing.</string>
    <string name="help_repress_pause_title">Pause</string>
    <string name="help_repress_pause_text">The sound will pause. When you press it again, it will resume.</string>
    <string name="help_section_sound_selection">Söund selëctiön</string>
    <string name="help_sound_selection_pretext">Long press on any sound to activate the sound selection mode. After that, these options are available:</string>
    <string name="help_select_all_sounds_title">Select all sounds</string>
    <string name="help_edit_sounds_title">Edit sound(s)</string>
    <string name="help_delete_sounds_title">Delete sound(s)</string>
    <string name="help_sound_selection_posttext"><b>Prö tïp:</b> While in sound selection mode, long press on any unselected sound to select it as well as all sounds between it and the last selected one.</string>
    <string name="help_section_category_actions">Categöry actiöns</string>
    <string name="help_edit_category_title">Edit category</string>
    <string name="help_edit_category_text">This will let change a category\'s name and colour, as well as reorder the sounds within it by different parameters.</string>
    <string name="help_delete_category_title">Delete category</string>
    <string name="help_delete_category_text">This will delete the category, along with all sounds in it.</string>
    <string name="help_section_why_oue">Why all the "öüë" stuff?</string>
    <string name="help_why_oue_pretext">Because it\'s kööl.</string>
    <string name="backup_settings_and_data">Backup settings and data</string>
    <string name="restore_settings_and_data">Restore settings and data</string>
    <string name="do_it">Do it!</string>
    <string name="export_description">This will export all your settings and data to a neat ZIP file, which you can import later.</string>
    <string name="restore_description">If you previously exported your data, you can now restore it from the generated ZIP file. Be aware that this will replace all your current sounds.</string>
    <string name="share_with">Share with …</string>
    <string name="no_file_chosen">No file chosen!</string>
    <string name="could_not_restore_db">Could not restore database! No further action was taken</string>
    <string name="no_database_file_found">No database file found in the archive</string>
    <string name="could_not_restore_sounds">Could not restore all the sounds; some of them might not work as intended</string>
    <string name="error_messages">Error messages</string>
    <string name="could_not_restore_settings">Could not restore settings</string>
    <string name="restoration_results">Restoration results</string>
    <string name="database_restored">Database restored</string>
    <string name="sounds_restored">Sounds restored</string>
    <string name="settings_restored">Settings restored</string>
    <string name="backup_results">Backup results</string>
    <string name="backup_successful">Backup successful</string>
    <string name="backup_failed">Backup failed</string>
    <string name="no_settings_file_found">No settings file found in the archive</string>
    <string name="backing_up_settings">Backing up settings …</string>
    <string name="backing_up_database">Backing up database …</string>
    <string name="backing_up_sounds">Backing up sounds …</string>
    <string name="restoring_database">Restoring database …</string>
    <string name="restoring_sounds">Restoring sounds …</string>
    <string name="restoring_settings">Restoring settings …</string>
    <string name="could_not_add_sound">Could not add sound: %1$s</string>
    <string name="an_error_occurred">An error occurred</string>
    <string name="fail_move_sounds_local">Could not move sound files to local storage</string>
    <string name="auto_imported_sounds">Auto-imported sounds</string>
</resources>