<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_set_repress_mode"
        android:title="@string/repress_mode"
        android:icon="@drawable/ic_repress_stop"
        android:orderInCategory="0"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />
    <item
        android:id="@+id/action_add_category"
        android:icon="@drawable/ic_add_category"
        android:title="@string/add_category"
        android:orderInCategory="1"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_zoom_in"
        android:icon="@drawable/ic_zoom_in"
        android:title="@string/zoom_in"
        android:orderInCategory="2"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_zoom_out"
        android:icon="@drawable/ic_zoom_out"
        android:title="@string/zoom_out"
        android:orderInCategory="2"
        app:showAsAction="always" />

</menu>