<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="us.huseli.soundboard.viewmodels.BaseCategoryEditViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/edit_sound_category_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/margin_xlarge"
        tools:context=".fragments.EditCategoryDialogFragment">

        <TextView
            android:id="@+id/category_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/category_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/name"
            android:importantForAutofill="no"
            android:inputType="text"
            android:singleLine="true"
            android:text="@{viewModel.name}"
            android:textColor="@android:color/primary_text_dark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/category_name_label" />

        <TextView
            android:id="@+id/category_color_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal"
            android:text="@string/background_colour"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/category_name" />

        <LinearLayout
            android:id="@+id/color_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/category_color_label">

            <ImageView
                android:id="@+id/current_color"
                android:layout_width="@dimen/action_button_height"
                android:layout_height="@dimen/action_button_height"
                android:layout_marginEnd="@dimen/margin_normal"
                android:background="@drawable/color_circle"
                android:elevation="@dimen/elevation_normal"
                android:src="@drawable/color_circle"
                app:drawableColor="@{viewModel.backgroundColor}"
                tools:ignore="ContentDescription"
                tools:targetApi="lollipop" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/select_color_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/select_colour" />
        </LinearLayout>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/sort_container"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:visibility="gone"
            tools:visibility="visible"
            app:layout_constraintTop_toBottomOf="@+id/color_container">

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="@dimen/margin_normal"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/sort_by_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_normal"
                android:text="@string/sort_by" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/sort_by" />

            <RadioGroup
                android:id="@+id/sort_order"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/sort_order_ascending"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/elevation_large"
                    android:text="@string/ascending" />

                <RadioButton
                    android:id="@+id/sort_order_descending"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/descending" />
            </RadioGroup>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>